# Barbara-FL

./: README.md  fl_client.py  fl_server.py  neural_net_helper.py  pyproject.toml  socket_methods.py
FLdata/client-1: BoT/: test.parquet  test_dist.txt  train.parquet  train_dist.txt
FLdata/client-2: UNSW/: test.parquet  test_dist.txt  train_dist.txt
FLdata/client-3: CSE/: test.parquet  test_dist.txt  train_dist.txt
barbara_fl/: client.py  client_helper.py  fl_client.py  fl_server.py  neural_net_helper.py  server.py  simulation.py  socket_methods.py
tests/: test.py
